--- a/GNR.css
+++ b/GNR.css
@@ -144,11 +144,14 @@ h4 {
 	justify-content: center;
 	text-indent:20px;
 }
+body::-webkit-scrollbar {
+  overflow-x: hidden;
+}
 
-
-
-
-
-
-
-
+body {
+	overflow: hidden;
+  overflow-style: none; 
+  scrollbar-width: none;
+  border: 0px dotted black;
+  overflow-y: scroll;
+}
